compiler/dUMLeParser.py
# Generated from grammar\dUMLe.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class dUMLeParser ( Parser ):

    grammarFileName = "dUMLe.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'diagclass'", "':'", "'diagseq'", "'diagusecase'", 
                     "'useTheme'", "'['", "','", "']'", "'='", "'def'", 
                     "'('", "')'", "'return'", "'exec'", "'for'", "'in'", 
                     "'labeled'", "'.'", "'note'", "'actor'", "'theme'", 
                     "'package'", "'block'", "'usecase'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'\r'", "<INVALID>", 
                     "<INVALID>", "'$'", "' '", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\n'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "PACKAGE_TYPE", "CLASS_TYPE", "PARAM_TYPE", 
                      "CONNECTION_TYPE", "MODIFIER", "CR", "MODE", "COM_SIGN", 
                      "DEEP_COPY", "BR", "SCOPE_NAME", "NAME", "NUMBER", 
                      "NL", "IND", "QUOTE", "ARROW", "TEXT" ]

    RULE_program = 0
    RULE_diagcreation = 1
    RULE_class_diagram = 2
    RULE_seq_diagram = 3
    RULE_use_case_diagram = 4
    RULE_instruction = 5
    RULE_obj_declaration = 6
    RULE_useTheme = 7
    RULE_list_declaration = 8
    RULE_list_access = 9
    RULE_assignment = 10
    RULE_fun_declaration = 11
    RULE_fun_call = 12
    RULE_execution = 13
    RULE_loop = 14
    RULE_connection = 15
    RULE_obj_access = 16
    RULE_class_declaration = 17
    RULE_class_declaration_line = 18
    RULE_note = 19
    RULE_actor = 20
    RULE_theme = 21
    RULE_package_declaration = 22
    RULE_arg_list = 23
    RULE_arg_list_include_scope = 24
    RULE_block = 25
    RULE_use_case = 26
    RULE_name = 27
    RULE_arg_name = 28

    ruleNames =  [ "program", "diagcreation", "class_diagram", "seq_diagram", 
                   "use_case_diagram", "instruction", "obj_declaration", 
                   "useTheme", "list_declaration", "list_access", "assignment", 
                   "fun_declaration", "fun_call", "execution", "loop", "connection", 
                   "obj_access", "class_declaration", "class_declaration_line", 
                   "note", "actor", "theme", "package_declaration", "arg_list", 
                   "arg_list_include_scope", "block", "use_case", "name", 
                   "arg_name" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    PACKAGE_TYPE=25
    CLASS_TYPE=26
    PARAM_TYPE=27
    CONNECTION_TYPE=28
    MODIFIER=29
    CR=30
    MODE=31
    COM_SIGN=32
    DEEP_COPY=33
    BR=34
    SCOPE_NAME=35
    NAME=36
    NUMBER=37
    NL=38
    IND=39
    QUOTE=40
    ARROW=41
    TEXT=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(dUMLeParser.EOF, 0)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dUMLeParser.InstructionContext)
            else:
                return self.getTypedRuleContext(dUMLeParser.InstructionContext,i)


        def diagcreation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dUMLeParser.DiagcreationContext)
            else:
                return self.getTypedRuleContext(dUMLeParser.DiagcreationContext,i)


        def BR(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.BR)
            else:
                return self.getToken(dUMLeParser.BR, i)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.NL)
            else:
                return self.getToken(dUMLeParser.NL, i)

        def getRuleIndex(self):
            return dUMLeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = dUMLeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << dUMLeParser.T__0) | (1 << dUMLeParser.T__2) | (1 << dUMLeParser.T__3) | (1 << dUMLeParser.T__4) | (1 << dUMLeParser.T__5) | (1 << dUMLeParser.T__9) | (1 << dUMLeParser.T__13) | (1 << dUMLeParser.T__14) | (1 << dUMLeParser.T__18) | (1 << dUMLeParser.T__19) | (1 << dUMLeParser.T__20) | (1 << dUMLeParser.T__21) | (1 << dUMLeParser.T__22) | (1 << dUMLeParser.T__23) | (1 << dUMLeParser.CLASS_TYPE) | (1 << dUMLeParser.BR) | (1 << dUMLeParser.SCOPE_NAME) | (1 << dUMLeParser.NAME) | (1 << dUMLeParser.NL))) != 0):
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==dUMLeParser.BR or _la==dUMLeParser.NL:
                    self.state = 58
                    _la = self._input.LA(1)
                    if not(_la==dUMLeParser.BR or _la==dUMLeParser.NL):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 63
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 66
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [dUMLeParser.T__4, dUMLeParser.T__5, dUMLeParser.T__9, dUMLeParser.T__13, dUMLeParser.T__14, dUMLeParser.T__18, dUMLeParser.T__19, dUMLeParser.T__20, dUMLeParser.T__21, dUMLeParser.T__22, dUMLeParser.T__23, dUMLeParser.CLASS_TYPE, dUMLeParser.SCOPE_NAME, dUMLeParser.NAME]:
                    self.state = 64
                    self.instruction()
                    pass
                elif token in [dUMLeParser.T__0, dUMLeParser.T__2, dUMLeParser.T__3]:
                    self.state = 65
                    self.diagcreation()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 71
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 68
                        _la = self._input.LA(1)
                        if not(_la==dUMLeParser.BR or _la==dUMLeParser.NL):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume() 
                    self.state = 73
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self.match(dUMLeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DiagcreationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_diagram(self):
            return self.getTypedRuleContext(dUMLeParser.Class_diagramContext,0)


        def seq_diagram(self):
            return self.getTypedRuleContext(dUMLeParser.Seq_diagramContext,0)


        def use_case_diagram(self):
            return self.getTypedRuleContext(dUMLeParser.Use_case_diagramContext,0)


        def getRuleIndex(self):
            return dUMLeParser.RULE_diagcreation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiagcreation" ):
                listener.enterDiagcreation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiagcreation" ):
                listener.exitDiagcreation(self)




    def diagcreation(self):

        localctx = dUMLeParser.DiagcreationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_diagcreation)
        try:
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [dUMLeParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.class_diagram()
                pass
            elif token in [dUMLeParser.T__2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.seq_diagram()
                pass
            elif token in [dUMLeParser.T__3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.use_case_diagram()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_diagramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(dUMLeParser.NAME, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.NL)
            else:
                return self.getToken(dUMLeParser.NL, i)

        def BR(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.BR)
            else:
                return self.getToken(dUMLeParser.BR, i)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dUMLeParser.InstructionContext)
            else:
                return self.getTypedRuleContext(dUMLeParser.InstructionContext,i)


        def IND(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.IND)
            else:
                return self.getToken(dUMLeParser.IND, i)

        def getRuleIndex(self):
            return dUMLeParser.RULE_class_diagram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_diagram" ):
                listener.enterClass_diagram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_diagram" ):
                listener.exitClass_diagram(self)




    def class_diagram(self):

        localctx = dUMLeParser.Class_diagramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_class_diagram)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(dUMLeParser.T__0)
            self.state = 88 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 87
                self.match(dUMLeParser.BR)
                self.state = 90 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==dUMLeParser.BR):
                    break

            self.state = 92
            self.match(dUMLeParser.NAME)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dUMLeParser.BR:
                self.state = 93
                self.match(dUMLeParser.BR)
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 99
            self.match(dUMLeParser.T__1)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dUMLeParser.BR:
                self.state = 100
                self.match(dUMLeParser.BR)
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 106
            self.match(dUMLeParser.NL)
            self.state = 131 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 110
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==dUMLeParser.NL:
                        self.state = 107
                        self.match(dUMLeParser.NL)
                        self.state = 112
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 114 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 113
                        self.match(dUMLeParser.IND)
                        self.state = 116 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==dUMLeParser.IND):
                            break

                    self.state = 118
                    self.instruction()
                    self.state = 122
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 119
                            self.match(dUMLeParser.BR) 
                        self.state = 124
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

                    self.state = 128
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 125
                            self.match(dUMLeParser.NL) 
                        self.state = 130
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,11,self._ctx)


                else:
                    raise NoViableAltException(self)
                self.state = 133 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Seq_diagramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(dUMLeParser.NAME, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.NL)
            else:
                return self.getToken(dUMLeParser.NL, i)

        def BR(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.BR)
            else:
                return self.getToken(dUMLeParser.BR, i)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dUMLeParser.InstructionContext)
            else:
                return self.getTypedRuleContext(dUMLeParser.InstructionContext,i)


        def IND(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.IND)
            else:
                return self.getToken(dUMLeParser.IND, i)

        def getRuleIndex(self):
            return dUMLeParser.RULE_seq_diagram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeq_diagram" ):
                listener.enterSeq_diagram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeq_diagram" ):
                listener.exitSeq_diagram(self)




    def seq_diagram(self):

        localctx = dUMLeParser.Seq_diagramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_seq_diagram)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.match(dUMLeParser.T__2)
            self.state = 137 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 136
                self.match(dUMLeParser.BR)
                self.state = 139 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==dUMLeParser.BR):
                    break

            self.state = 141
            self.match(dUMLeParser.NAME)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dUMLeParser.BR:
                self.state = 142
                self.match(dUMLeParser.BR)
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 148
            self.match(dUMLeParser.T__1)
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dUMLeParser.BR:
                self.state = 149
                self.match(dUMLeParser.BR)
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 155
            self.match(dUMLeParser.NL)
            self.state = 180 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 159
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==dUMLeParser.NL:
                        self.state = 156
                        self.match(dUMLeParser.NL)
                        self.state = 161
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 163 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 162
                        self.match(dUMLeParser.IND)
                        self.state = 165 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==dUMLeParser.IND):
                            break

                    self.state = 167
                    self.instruction()
                    self.state = 171
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,18,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 168
                            self.match(dUMLeParser.BR) 
                        self.state = 173
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,18,self._ctx)

                    self.state = 177
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,19,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 174
                            self.match(dUMLeParser.NL) 
                        self.state = 179
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,19,self._ctx)


                else:
                    raise NoViableAltException(self)
                self.state = 182 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,20,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Use_case_diagramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(dUMLeParser.NAME, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.NL)
            else:
                return self.getToken(dUMLeParser.NL, i)

        def BR(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.BR)
            else:
                return self.getToken(dUMLeParser.BR, i)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(dUMLeParser.InstructionContext)
            else:
                return self.getTypedRuleContext(dUMLeParser.InstructionContext,i)


        def IND(self, i:int=None):
            if i is None:
                return self.getTokens(dUMLeParser.IND)
            else:
                return self.getToken(dUMLeParser.IND, i)

        def getRuleIndex(self):
            return dUMLeParser.RULE_use_case_diagram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUse_case_diagram" ):
                listener.enterUse_case_diagram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUse_case_diagram" ):
                listener.exitUse_case_diagram(self)




    def use_case_diagram(self):

        localctx = dUMLeParser.Use_case_diagramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_use_case_diagram)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(dUMLeParser.T__3)
            self.state = 186 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 185
                self.match(dUMLeParser.BR)
                self.state = 188 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==dUMLeParser.BR):
                    break

            self.state = 190
            self.match(dUMLeParser.NAME)
            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dUMLeParser.BR:
                self.state = 191
                self.match(dUMLeParser.BR)
                self.state = 196
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 197
            self.match(dUMLeParser.T__1)
            self.state = 201
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dUMLeParser.BR:
                self.state = 198
                self.match(dUMLeParser.BR)
                self.state = 203
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 204
            self.match(dUMLeParser.NL)
            self.state = 229 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 208
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==dUMLeParser.NL:
                        self.state = 205
                        self.match(dUMLeParser.NL)
                        self.state = 210
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 212 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 211
                        self.match(dUMLeParser.IND)
                        self.state = 214 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==dUMLeParser.IND):
                            break

                    self.state = 216
                    self.instruction()
                    self.state = 220
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,26,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 217
                            self.match(dUMLeParser.BR) 
                        self.state = 222
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,26,self._ctx)

                    self.state = 226
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,27,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 223
                            self.match(dUMLeParser.NL) 
                        self.state = 228
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,27,self._ctx)


                else:
                    raise NoViableAltException(self)
                self.state = 231 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,28,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def obj_declaration(self):
            return self.getTypedRuleContext(dUMLeParser.Obj_declarationContext,0)


        def list_declaration(self):
            return self.getTypedRuleContext(dUMLeParser.List_declarationContext,0)


        def list_access(self):
            return self.getTypedRuleContext(dUMLeParser.List_accessContext,0)


        def assignment(self):
            return self.getTypedRuleContext(dUMLeParser.AssignmentContext,0)


        def fun_declaration(self):
            return self.getTypedRuleContext(dUMLeParser.Fun_declarationContext,0)


        def execution(self):
            return self.getTypedRuleContext(dUMLeParser.ExecutionContext,0)


        def loop(self):
            return self.getTypedRuleContext(dUMLeParser.LoopContext,0)


        def connection(self):
            return self.getTypedRuleContext(dUMLeParser.ConnectionContext,0)


        def useTheme(self):
            return self.getTypedRuleContext(dUMLeParser.UseThemeContext,0)


        def getRuleIndex(self):
            return dUMLeParser.RULE_instruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction" ):
                listener.enterInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction" ):
                listener.exitInstruction(self)




    def instruction(self):

        localctx = dUMLeParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_instruction)
        try:
            self.state = 242
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,29,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 233
                self.obj_declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 234
                self.list_declaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 235
                self.list_access()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 236
                self.assignment()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 237
                self.fun_declaration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 238
                self.execution()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 239
                self.loop()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 240
                self.connection()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 241
                self.useTheme()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Obj_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_declaration(self):
            return self.getTypedRuleContext(dUMLeParser.Class_declarationContext,0)


        def note(self):
            return self.getTypedRuleContext(dUMLeParser.NoteContext,0)


        def actor(self):
            return self.getTypedRuleContext(dUMLeParser.ActorContext,0)


        def theme(self):
            return self.getTypedRuleContext(dUMLeParser.ThemeContext,0)


        def package_declaration(self):
            return self.getTypedRuleContext(dUMLeParser.Package_declarationContext,0)


        def block(self):
            return self.getTypedRuleContext(dUMLeParser.BlockContext,0)


        def use_case(self):
            return self.getTypedRuleContext(dUMLeParser.Use_caseContext,0)


        def getRuleIndex(self):
            return dUMLeParser.RULE_obj_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObj_declaration" ):
                listener.enterObj_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObj_declaration" ):
                listener.exitObj_declaration(self)




    def obj_declaration(self):
